# audiobook_studio

./: .gitignore  .pre-commit-config.yaml  README.md  clone_voice.py  design_voice.py  kokoro_make_audiobook.py  make_audiobook.py  pyproject.toml  requirements.txt  run_benchmark.py  run_ui.py
.claude/: settings.json
.github/workflows/: format.yml
books/: thorns-of-regret.epub
docs/: preparation-model-benchmarks.md
sample/: qwen_tts_sample.py
src/audiobook/: __init__.py  __main__.py  cli.py  config.py  preflight.py  workflow.py
src/audiobook/assembly/: __init__.py  audio.py
src/audiobook/benchmarking/: __init__.py  corpus.py  plots.py  preparation.py  report.py  run.py  scoring.py
src/audiobook/benchmarking/cases/: core-001-citation-author-year-list.json  core-002-citation-single-parenthetical.json  core-003-citation-sentence-final.json  core-004-citation-semicolon-list.json  core-005-two-citations-one-passage.json  core-006-citation-narrative-year-only.json  core-007-reference-marker-numeric.json  core-008-reference-marker-range.json  core-009-reference-marker-footnote-dagger.json  core-010-two-reference-markers.json  core-011-visual-notation-section-symbol.json  (+38 more)
src/audiobook/chunking/: __init__.py  semantic.py
src/audiobook/extraction/: __init__.py  epub.py  pdf.py  text.py
src/audiobook/preparation/: __init__.py  artifacts.py  normalization.py  pipeline.py  prompting.py  segmentation.py  types.py  validation.py
src/audiobook/synthesis/: __init__.py  qwen.py  transcribe.py  voices.py
src/audiobook/ui/: __init__.py  app.py  library.py  review.py  runtime.py
tests/: test_benchmarking.py  test_epub_extraction.py  test_loudness_normalization.py  test_narration_preparation.py  test_pdf_extraction.py  test_preflight.py  test_preparation_adaptation.py  test_semantic_chunking.py
voices/: Isabel v1.txt
(+9 files in other folders)
