[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobook-pipeline"
version = "0.2.0"
description = "Prepare PDFs for listening and generate chaptered audiobooks with Qwen3-TTS."
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[project.scripts]
audiobook = "audiobook.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
